kubernetes/tennant/apps/ascii-movie/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ascii-movie-health
  namespace: ascii-movie
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kgateway-system
      name: public
  hostnames:
    - starwarstel.net
    - asciitel.net
  rules:
    - matches:
        - path:
            type: Exact
            value: /health
      backendRefs:
        - kind: Service
          name: ascii-movie-api
          port: 1977
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ascii-movie
  namespace: ascii-movie
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kgateway-system
      name: public
  hostnames:
    - starwarstel.net
    - "*.starwarstel.net"
    - asciitel.net
    - "*.asciitel.net"
    - movie.gabe565.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: github.com
            path:
              type: ReplaceFullPath
              replaceFullPath: /gabe565/ascii-movie
            statusCode: 302
